--- a/TP-KNN/Untitled.ipynb
+++ b/TP-KNN/Untitled.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "d21043a4-bfce-4f36-b07d-ef7ccddbbdba",
    "metadata": {},
    "outputs": [],
@@ -33,46 +33,46 @@
     "}\n",
     "\n",
     "def load_dataset(folder_path):\n",
-    "    X = [] #images\n",
-    "    y = [] #labels\n",
-    "    for emotion in os.listdir(folder_path):\n",
+    "    X = [] #liste pour les images uploadees\n",
+    "    y = [] #liste pour les etiquettes des images\n",
+    "    for emotion in os.listdir(folder_path): #parcourir chaque directoire avec une emotion\n",
     "        emotion_path = os.path.join(folder_path, emotion)\n",
     "        if not os.path.isdir(emotion_path):\n",
     "            continue\n",
-    "        label = emotions.get(emotion.lower())\n",
+    "        label = emotions.get(emotion.lower()) #etiquette specifique\n",
     "        if label is None:\n",
     "            continue\n",
-    "        for image_name in os.listdir(emotion_path):\n",
+    "        for image_name in os.listdir(emotion_path): #parcourir les images de directoire\n",
     "            image_path = os.path.join(emotion_path, image_name)\n",
     "            image = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)\n",
     "            if image is None:\n",
     "                continue\n",
     "            image = cv2.resize(image, (48, 48))\n",
-    "            X.append(image)\n",
-    "            y.append(label)\n",
+    "            X.append(image) #ajouter l'image dans la liste\n",
+    "            y.append(label) #ajouter l'etiquette dans la liste\n",
     "    return np.array(X), np.array(y)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "d63d7f84-594e-4543-838a-90e0149d9c8a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_lbp_features(images):\n",
+    "def extract_lbp_features(images): #pour extraire les caracteristiques LBP des images\n",
     "    features = []\n",
     "    for image in images:\n",
-    "        lbp = local_binary_pattern(image, P=8, R=1, method='uniform')\n",
-    "        h, _ = np.histogram(lbp.ravel(), bins=np.arange(0, 10), range=(0, 9))\n",
-    "        h = h.astype(\"float\") / (h.sum() + 1e-7)\n",
+    "        lbp = local_binary_pattern(image, P=8, R=1, method='uniform') #P=voisins, R=rayon\n",
+    "        h, _ = np.histogram(lbp.ravel(), bins=np.arange(0, 10), range=(0, 9)) #l'histogramme de LBP avec un vector de 9 elements\n",
+    "        h = h.astype(\"float\") / (h.sum() + 1e-7) #normaliser l'histogramme pour eviter la division par 0\n",
     "        features.append(h)\n",
     "    return np.array(features)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "cda79af2-b638-4374-9448-3748259f4e21",
    "metadata": {},
    "outputs": [
@@ -122,6 +122,14 @@
     "print(\"classification report:\\n\")\n",
     "print(classification_report(y_test, y_pred))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "571c733b-b899-4be2-b65b-865c46a2e502",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
